Correct Backstretch, works now!

--- a/css/main.css
+++ b/css/main.css
@@ -253,9 +253,9 @@ time {
 /* SECTION  4.0 ----------------------------- *
 /
 /* HEADER STYLING ----------------------------- */
-html {
+/*html {
     background-color: #dbdbda;
-}
+}*/
 
 /* Parallax instructions:
 https://www.w3schools.com/howto/howto_css_parallax.asp */
